
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.sensormanager";
option java_outer_classname = "SensorManager";
option objc_class_prefix = "HLW";

package sensormanager;

// The data service definition
service SensorManager {
    rpc GetAllSensorsOfType(AllSensorsOfTypeRequest) returns (AllSensorsOfTypeResponse) {}
    rpc GetAllSensorsOnVessel(AllSensorsOnVesselRequest) returns (AllSensorsOnVesselResponse) {}
}

message AllSensorsOfTypeRequest {
    SensorType type = 1;
}

message AllSensorsOfTypeResponse {
    repeated Sensor sensors = 1;
}

message AllSensorsOnVesselRequest {
    string vesselID = 1;
}

message AllSensorsOnVesselResponse {
    repeated Sensor sensors = 1;
}

enum SensorType {
   OPTICAL = 0;
   INFRARED = 1;
   RADAR = 2;
   LIDAR = 3;
}

message Sensor {
    SensorType type = 1;
    int32 sensorWidth = 2;
    int32 sensorHeight = 3;
    string ipAddress = 4;
    int32 port = 5;
}
